fixed image placement on mobile

--- a/ontour/src/index.css
+++ b/ontour/src/index.css
@@ -22,6 +22,7 @@ h4 {
 
 #artist-background{
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
   height: 40vh;
   position: relative;
